# ODR-PadEnc

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.optimized  ENHANCED_FEATURES_REPORT.md  README.md  test-minimal.cpp  validate_implementation.sh
src/: api_interface.cpp  api_interface.h  content_manager.cpp  content_manager.h  enhanced_mot.cpp  enhanced_mot.h  security_utils.cpp  security_utils.h  smart_dls.cpp  smart_dls.h  thai_rendering.cpp  thai_rendering.h
test-build/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  padenc_tests[1]_include.cmake
tests/: CMakeLists.txt  test_api_interface.cpp  test_dls_processing.cpp  test_main.cpp  test_mot_slideshow.cpp  test_performance.cpp  test_security.cpp  test_thai_rendering.cpp
